[gd_scene load_steps=14 format=3 uid="uid://bagicbqose7h7"]

[ext_resource type="Script" path="res://Scripts/Main.gd" id="1_2sycs"]
[ext_resource type="Script" path="res://Scripts/Grid.gd" id="8_fdjq0"]
[ext_resource type="PackedScene" uid="uid://ervuavq2d450" path="res://Scenes/Unit.tscn" id="9_0tt8x"]
[ext_resource type="PackedScene" uid="uid://coq2af2m4xnjn" path="res://Scenes/pathfinding.tscn" id="10_wpxw1"]
[ext_resource type="Script" path="res://Scripts/Camera.gd" id="11_4rbkv"]
[ext_resource type="Script" path="res://Scripts/GUI.gd" id="12_elw0d"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_u8r7j"]
texture_region_size = Vector2i(128, 128)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_l7bda"]
texture_region_size = Vector2i(128, 128)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_6264m"]
texture_region_size = Vector2i(128, 128)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_078xw"]
texture_region_size = Vector2i(128, 128)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ehq5t"]
texture_region_size = Vector2i(128, 128)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_tbol7"]
texture_region_size = Vector2i(128, 128)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_1wnfs"]
tile_size = Vector2i(128, 128)
sources/0 = SubResource("TileSetAtlasSource_u8r7j")
sources/1 = SubResource("TileSetAtlasSource_l7bda")
sources/2 = SubResource("TileSetAtlasSource_6264m")
sources/3 = SubResource("TileSetAtlasSource_078xw")
sources/4 = SubResource("TileSetAtlasSource_ehq5t")
sources/5 = SubResource("TileSetAtlasSource_tbol7")

[node name="Main" type="Node2D"]
script = ExtResource("1_2sycs")

[node name="Grid" type="TileMap" parent="."]
tile_set = SubResource("TileSet_1wnfs")
format = 2
layer_0/name = "floor"
layer_1/name = "building"
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = false
layer_1/y_sort_origin = 0
layer_1/z_index = 1
layer_1/tile_data = PackedInt32Array()
script = ExtResource("8_fdjq0")

[node name="Debug" type="Node2D" parent="Grid"]

[node name="Units" type="Node2D" parent="Grid"]

[node name="Unit" parent="Grid/Units" instance=ExtResource("9_0tt8x")]

[node name="Pathfinding" parent="Grid" instance=ExtResource("10_wpxw1")]

[node name="Camera" type="Camera2D" parent="."]
script = ExtResource("11_4rbkv")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="GUI" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("12_elw0d")

[node name="BaseButtons" type="Control" parent="CanvasLayer/GUI"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -40.0
offset_right = 40.0
grow_vertical = 0
mouse_filter = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/GUI/BaseButtons"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -40.0
offset_right = 524.0
grow_vertical = 0

[node name="Construct" type="Button" parent="CanvasLayer/GUI/BaseButtons/HBoxContainer"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
text = "Construct"

[node name="Build" type="Button" parent="CanvasLayer/GUI/BaseButtons/HBoxContainer"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
text = "Build"

[node name="Desinate" type="Button" parent="CanvasLayer/GUI/BaseButtons/HBoxContainer"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
text = "Designate"

[node name="Tasks" type="Button" parent="CanvasLayer/GUI/BaseButtons/HBoxContainer"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
text = "Tasks"

[node name="Bio" type="Button" parent="CanvasLayer/GUI/BaseButtons/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
text = "Bio"

[node name="ConstructButtons" type="Control" parent="CanvasLayer/GUI"]
visible = false
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -40.0
offset_right = 40.0
grow_vertical = 0
mouse_filter = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/GUI/ConstructButtons"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -40.0
offset_right = 44.0
grow_vertical = 0

[node name="Back" type="Button" parent="CanvasLayer/GUI/ConstructButtons/HBoxContainer"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
text = "Back"
expand_icon = true

[node name="WoodWall" type="Button" parent="CanvasLayer/GUI/ConstructButtons/HBoxContainer"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
text = "Wood Wall"
expand_icon = true

[node name="StoneWall" type="Button" parent="CanvasLayer/GUI/ConstructButtons/HBoxContainer"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
text = "Stone Wall"
expand_icon = true

[node name="DirtFloor" type="Button" parent="CanvasLayer/GUI/ConstructButtons/HBoxContainer"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
text = "Dirt"
expand_icon = true

[node name="InfoPanel" type="Control" parent="CanvasLayer/GUI"]
visible = false
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 6.0
offset_top = -169.0
offset_right = 46.0
offset_bottom = -129.0
grow_vertical = 0
mouse_filter = 1

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/GUI/InfoPanel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(12.88, 2.96)
mouse_filter = 1
color = Color(0.258824, 0.258824, 0.258824, 0.568627)

[node name="Name" type="Label" parent="CanvasLayer/GUI/InfoPanel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "#Debug"

[connection signal="gui_input" from="CanvasLayer/GUI" to="CanvasLayer/GUI" method="_on_gui_input"]
[connection signal="pressed" from="CanvasLayer/GUI/BaseButtons/HBoxContainer/Construct" to="CanvasLayer/GUI" method="_on_construct_pressed"]
[connection signal="pressed" from="CanvasLayer/GUI/ConstructButtons/HBoxContainer/Back" to="CanvasLayer/GUI" method="_on_back_pressed"]
